add: tick and plot

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="js/chart.js"></script>
     <script src="js/jquery.min.js"></script>
+    <script src="js/jcanvas.min.js"></script>
     <title>Document</title>
 </head>
 
@@ -62,11 +63,11 @@
                 <span>Start</span>
                 <span>Stop</span>
                 <button class="plus">Plus</button>
-                <input class="start" type="time">
+                <input class="start" id="start" type="time" value="">
                 <input class="stop" type="time">
-                <div class="stash"></div>
+                <!-- <div class="stash" id="stash"></div> -->
             </div>
-            <input class="button" type="sabmit" value="equel" />
+            <input class="equel" type="sabmit" value="equel" />
         </div>
     </div>
     <script src="js/script.js"></script>
