--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/chart.js"></script>
+    <script src="js/chart.min.js"></script>
     <script src="js/jquery.min.js"></script>
     <title>Document</title>
 </head>
