--- a/src/index2.html
+++ b/src/index2.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style1.css">
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/chart.min.js"></script>
     <title>Document</title>
 </head>
 
@@ -14,69 +16,94 @@
     <div class="container">
         <div class="container__plot">
             <div class="result"></div>
-            <div class="plot_day"></div>
+            <div class="plot_day">
+                <canvas id="myChart" width="695" height="248"></canvas>
+            </div>
             <div class="plot_trande"></div>
         </div>
         <div class="container__calc">
-            <form class="calc" action="calculator">
+            <form class="calc" name="calculator">
                 <div class="battery_stat">
                     <h3>Battery</h3>
-                    <h4>Voltage</h4>
-                    <select name="battery" id="">
-                        <option selected value="24">24</option>
-                        <option value="36">36</option>
-                        <option value="48">48</option>
-                        <option value="80">80</option>
-                    </select>
-                    <span>V</span>
-                    <h4>Capacity</h4>
-                    <select name="capacity" id="">
-                        <option selected value="206">206</option>
-                        <option value="412">412</option>
-                        <option value="554">554</option>
-                        <option value="618">618</option>
+                    <label>
+                        <h4>Voltage</h4>
+                        <select class="battery_voltage" name="battery_volt" onblur="document.calculator.battery_en.value = eval(document.calculator.battery_volt.value * document.calculator.battery_cap.value / 1000)">
+                            <option selected value="24">24</option>
+                            <option value="36">36</option>
+                            <option value="48">48</option>
+                            <option value="80">80</option>
+                        </select>
+                        <span>V</span>
+                    </label>
 
-                    </select>
-                    <span>Ah</span>
-                    <h4>Energy</h4>
-                    <input type="text" disabled>
-                    <span>kWh</span>
+                    <label>
+                        <h4>Capacity</h4>
+                        <select class="battery_capacity" name="battery_cap" onblur="document.calculator.battery_en.value = eval(document.calculator.battery_volt.value * document.calculator.battery_cap.value / 1000)">
+                            <option selected value="206">206</option>
+                            <option value="412">412</option>
+                            <option value="554">554</option>
+                            <option value="618">618</option>
+                        </select>
+                        <span>Ah</span>
+                    </label>
+
+                    <label>
+                        <h4>Energy</h4>
+                        <input name="battery_en" class="power_batt" type="text" placeholder="4,95" disabled>
+                        <span>kWh</span>
+                    </label>
                 </div>
+
                 <div class="truck_stat">
-                    <h3>Battery</h3>
-                    <h4>Voltage</h4>
-                    <select name="battery" id="">
-                        <option selected value="24">24</option>
-                        <option value="36">36</option>
-                        <option value="48">48</option>
-                        <option value="80">80</option>
-                    </select>
+                    <h3>Truck</h3>
+                    <label>
+                        <h4>Power consumption</h4>
+                        <input class="power_truck" type="text">
+                        <span>kWh/h</span>
+                    </label>
                 </div>
+
                 <div class="charge_stat">
-                    <h3>Carger</h3>
-                    <h4>Charge rate</h4>
-                    <select name="charge_rate" id="">
-                        <option selected value="0.5">0.5</option>
-                        <option value="1">1</option>
-                    </select>
-                    <span>C</span>
-                    <h4>Charge current</h4>
-                    <input type="text" disabled>
-                    <span>A</span>
+                    <h3>Charger</h3>
+                    <label>
+                        <h4>Charge rate</h4>
+                        <select name="charge_rate" onblur="document.calculator.carger_curr.value = eval(document.calculator.charge_rate.value * document.calculator.battery_cap.value)">
+                            <option selected value="0.5">0.5</option>
+                            <option value="1">1</option>
+                        </select>
+                        <span>C</span>
+                    </label>
+                    <label>
+                        <h4>Charge current</h4>
+                        <input name="carger_curr" class="charge_current" type="text" placeholder="100" disabled>
+                        <span>A</span>
+                    </label>
                 </div>
+
                 <div class="stop_time">
                     <h3>Pause time</h3>
-                    <span>Start</span>
-                    <input type="time">
-                    <span>Stop</span>
-                    <input type="time">
-                    <div class="stash"></div>
+                    <div style="display: flex; flex-direction: row;">
+                        <div style="display: flex; flex-direction: column;">
+                            <label style="display: flex; flex-direction: row; align-items: center;
+                            justify-content: center;"><span>Start</span>
+                                <input class="start" type="time">
+                            </label>
+                            <label style="display: flex; flex-direction: row; align-items: center;
+                            justify-content: center;"><span>Stop</span>
+                                <input class="stop" type="time">
+                            </label>
+                        </div>
+                        <span style="width: 100%;" class="plus"><span>Plus</span></span>
+                    </div>
+                    <div style="display: flex; flex-direction: column;" class="stash"></div>
                 </div>
-                <button>Equel</button>
+
+                <span class="equel">Calculate</span>
             </form>
         </div>
 
     </div>
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
