--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/chart.min.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/chart.min.js"></script>
     <title>Document</title>
 </head>
 
@@ -103,7 +103,7 @@
         </div>
 
     </div>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
