--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
                         <h4>Voltage</h4>
                         <select class="battery_voltage" name="battery_volt"
                             onchange="document.calculator.battery_en.value = eval(document.calculator.battery_volt.value * document.calculator.battery_cap.value / 1000),
-                        document.calculator.carger_curr.value = eval(document.calculator.charge_rate.value * document.calculator.battery_cap.value)">
+                        document.calculator.carger_curr.value = eval((document.calculator.charge_rate.value * document.calculator.battery_cap.value).toFixed(2))">
                             <option selected value="24">24</option>
                             <option value="36">36</option>
                             <option value="48">48</option>
@@ -44,7 +44,7 @@
                         <h4>Capacity</h4>
                         <select class="battery_capacity" name="battery_cap"
                             onchange="document.calculator.battery_en.value = eval(document.calculator.battery_volt.value * document.calculator.battery_cap.value / 1000),
-                        document.calculator.carger_curr.value = eval(document.calculator.charge_rate.value * document.calculator.battery_cap.value)">
+                        document.calculator.carger_curr.value = eval((document.calculator.charge_rate.value * document.calculator.battery_cap.value).toFixed(2))">
                             <option selected value="206">206</option>
                             <option value="412">412</option>
                             <option value="554">554</option>
@@ -74,7 +74,7 @@
                     <label>
                         <h4>Charge rate</h4>
                         <select name="charge_rate"
-                            onchange="document.calculator.carger_curr.value = eval(document.calculator.charge_rate.value * document.calculator.battery_cap.value)">
+                            onchange="document.calculator.carger_curr.value = eval((document.calculator.charge_rate.value * document.calculator.battery_cap.value).toFixed(2))">
                             <option selected value="0.1">0.1</option>
                             <option value="0.2">0.2</option>
                             <option value="0.5">0.5</option>
