add: block info and bug fix

--- a/src/index.html
+++ b/src/index.html
@@ -97,9 +97,13 @@
                         <span>A</span>
                     </label>
                 </div>
-
+                
                 <div class="stop_time">
-                    <h3 class="breaks" data-title="Паузы во времени работы">Breaks</h3>
+                    <div class="break_info">
+                        <h3 class="breaks">Breaks</h3>
+                        <div class="info_block"><img class="info_item" data-tooltip="Breaks in work time </br> описание блока" src="img/info.svg" alt="i"></div>
+                    </div>
+                    <div id="tooltip"></div>
                     <div class="block_row">
                         <div class="block_column">
                             <label>
