add: scroll and calc 7 day

--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,8 @@
                     <h4>Min SOC:<span class="min_soc">10%</span></h4>
                 </div>
                 <div class="work">
-                    <h4>Working:<span>24h</span></h4>
-                    <h4>Charging:<span>24h</span></h4>
+                    <h4>Working:<span class="working">24h</span></h4>
+                    <h4>Charging:<span class="charging">24h</span></h4>
                 </div>
             </div>
             <div class="plot_day">
